# DADIU_CompetenceProject

./: CMakeLists.txt  imgui.ini
cmake/: FindGLEW.cmake  FindGLM.cmake  FindSDL2.cmake  FindSDL2_IMAGE.cmake  FindSDL2_MIXER.cmake
data/: light_frag.glsl  screen_frag.glsl  standard.scene  test  test.scene
data/shaders/: companion_window_frag.glsl  companion_window_vert.glsl  render_model_frag.glsl  render_model_vert.glsl  scene_frag.glsl  scene_vert.glsl  standard_frag.glsl  standard_vert.glsl  transform_frag.glsl  transform_vert.glsl  window_frag.glsl  window_vert.glsl
src/: Engine.cpp  main.cpp
src/debug/: DebugInterface.hpp
src/engine/: Engine.cpp  Engine.hpp  Entity.hpp  God.cpp  God.hpp  Input.cpp  Input.hpp  Transform.hpp
src/engine/renderer/: Camera.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VRHandler.hpp  VRRenderModel.cpp  VRRenderModel.hpp  VRRenderer.hpp
src/engine/utils/: AssetManager.cpp  AssetManager.hpp  DataHandler.hpp  DataPath.hpp  DynamicPool.hpp  FileLoader.hpp  ObjParser.hpp  SceneLoader.hpp  Timer.hpp
src/game/: DebugCamera.hpp  Fruit.hpp  Game.hpp  Player.hpp  Snake.hpp  SnakeTail.hpp
src/renderer/: Renderer.cpp
src/utils/: DebugInterface.hpp
